// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EventPricingFactor /> renders correctly for event score 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <EventPricingFactorPresenter
    base={1}
    modifier={1.5}
    type="eventScoreModifier"
    unit=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <Connect(ApiAlertPresenter) />,
        <Flex
          justify="space-between"
        >
          <styled.p
            size={18}
          >
            Event Score: 2.500
          </styled.p>
          <Styled(styled.div)
            onClick={[Function]}
            size="medium"
            type="primary"
            weight="normal"
          >
            EDIT
          </Styled(styled.div)>
        </Flex>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <styled.p
              size={18}
            >
              Event Score: 2.500
            </styled.p>,
            <Styled(styled.div)
              onClick={[Function]}
              size="medium"
              type="primary"
              weight="normal"
            >
              EDIT
            </Styled(styled.div)>,
          ],
          "justify": "space-between",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Event Score: 2.500",
              "size": 18,
            },
            "ref": null,
            "rendered": "Event Score: 2.500",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "EDIT",
              "onClick": [Function],
              "size": "medium",
              "type": "primary",
              "weight": "normal",
            },
            "ref": null,
            "rendered": "EDIT",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <Connect(ApiAlertPresenter) />,
          <Flex
            justify="space-between"
          >
            <styled.p
              size={18}
            >
              Event Score: 2.500
            </styled.p>
            <Styled(styled.div)
              onClick={[Function]}
              size="medium"
              type="primary"
              weight="normal"
            >
              EDIT
            </Styled(styled.div)>
          </Flex>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <styled.p
                size={18}
              >
                Event Score: 2.500
              </styled.p>,
              <Styled(styled.div)
                onClick={[Function]}
                size="medium"
                type="primary"
                weight="normal"
              >
                EDIT
              </Styled(styled.div)>,
            ],
            "justify": "space-between",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Event Score: 2.500",
                "size": 18,
              },
              "ref": null,
              "rendered": "Event Score: 2.500",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "EDIT",
                "onClick": [Function],
                "size": "medium",
                "type": "primary",
                "weight": "normal",
              },
              "ref": null,
              "rendered": "EDIT",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`<EventPricingFactor /> renders correctly for spring 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <EventPricingFactorPresenter
    base={1}
    modifier={0.5}
    type="springModifier"
    unit="%"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <Connect(ApiAlertPresenter) />,
        <Flex
          justify="space-between"
        >
          <styled.p
            size={18}
          >
            Spring: 1.50%
          </styled.p>
          <Styled(styled.div)
            onClick={[Function]}
            size="medium"
            type="primary"
            weight="normal"
          >
            EDIT
          </Styled(styled.div)>
        </Flex>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <styled.p
              size={18}
            >
              Spring: 1.50%
            </styled.p>,
            <Styled(styled.div)
              onClick={[Function]}
              size="medium"
              type="primary"
              weight="normal"
            >
              EDIT
            </Styled(styled.div)>,
          ],
          "justify": "space-between",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Spring: 1.50%",
              "size": 18,
            },
            "ref": null,
            "rendered": "Spring: 1.50%",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "EDIT",
              "onClick": [Function],
              "size": "medium",
              "type": "primary",
              "weight": "normal",
            },
            "ref": null,
            "rendered": "EDIT",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <Connect(ApiAlertPresenter) />,
          <Flex
            justify="space-between"
          >
            <styled.p
              size={18}
            >
              Spring: 1.50%
            </styled.p>
            <Styled(styled.div)
              onClick={[Function]}
              size="medium"
              type="primary"
              weight="normal"
            >
              EDIT
            </Styled(styled.div)>
          </Flex>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <styled.p
                size={18}
              >
                Spring: 1.50%
              </styled.p>,
              <Styled(styled.div)
                onClick={[Function]}
                size="medium"
                type="primary"
                weight="normal"
              >
                EDIT
              </Styled(styled.div)>,
            ],
            "justify": "space-between",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Spring: 1.50%",
                "size": 18,
              },
              "ref": null,
              "rendered": "Spring: 1.50%",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "EDIT",
                "onClick": [Function],
                "size": "medium",
                "type": "primary",
                "weight": "normal",
              },
              "ref": null,
              "rendered": "EDIT",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;
